--- a/mycss.css
+++ b/mycss.css
@@ -17,6 +17,11 @@ body {
     font-weight: 400;
     margin-bottom: 30px;
   }  
+
+  .bg-1 { 
+    background-color: #2f2f2f; /* Black Gray */
+    color: #fff;
+  }
   
 
 
