--- a/mycss.css
+++ b/mycss.css
@@ -19,19 +19,19 @@ body {
   }  
 
   .bg-1 { 
-    background-color: #2f2f2f; /* Black Gray */
+    background-color: #3d3d3d; /* Black Gray */
     color: #fff;
   }
   .margin {margin-bottom: 45px;}
   
   .logo {
-    color: #f4511e;
-    font-size: 200px;
+    color: #2f2f2f;
+    font-size: 100px;
   }
 
   @media screen and (max-width: 480px) {
     .logo {
-      font-size: 150px;
+      font-size: 50px;
     }
   }
 
