--- a/mycss.css
+++ b/mycss.css
@@ -2,44 +2,53 @@ body {
     font: 200 15px 'Roboto', sans-serif;
     line-height: 1.8;
     color: #818181;
-  }
-  h2 {
+}
+
+h2 {
     font-size: 24px;
     text-transform: uppercase;
     color: #303030;
     font-weight: 600;
     margin-bottom: 30px;
-  }
-  h4 {
+}
+
+h4 {
     font-size: 19px;
     line-height: 1.375em;
     color: #303030;
     font-weight: 400;
     margin-bottom: 30px;
-  }  
+}
 
-  .bg-1 { 
-    background-color: #3d3d3d; /* Black Gray */
+.bg-1 {
+    background-color: #3d3d3d;
+    /* Black Gray */
     color: #fff;
-  }
-  .margin {margin-bottom: 45px;}
-  
-  .logo {
+}
+
+.margin {
+    margin-bottom: 100px;
+}
+
+.margnin_right {
+    margin-right: 10px;
+}
+
+.logo {
     color: #2f2f2f;
     font-size: 100px;
-  }
+}
 
-  @media screen and (max-width: 480px) {
+.container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+@media screen and (max-width: 480px) {
     .logo {
-      font-size: 50px;
+        font-size: 50px;
     }
-  }
-
-
-
-
-
-
+}
 
 /*.container : fixed width container
 /*.container-fluid : full width container
@@ -72,5 +81,5 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)
   <h6>h6 heading <small>secondary text</small></h6>
 
 */
-/*tooltip - <abbr title="World Health Organization">WHO</abbr>
 
+/*tooltip - <abbr title="World Health Organization">WHO</abbr>
